fix: recover and change password layout on mobile

--- a/src/ui/ForgotPassword/ForgotPassword.scss
+++ b/src/ui/ForgotPassword/ForgotPassword.scss
@@ -235,7 +235,7 @@
 
       &__title {
         margin-bottom: 10px;
-        margin-top: 80px;
+        margin-top: 40px;
         text-align: left;
         font-size: 22px;
         font-weight: 900;
@@ -261,9 +261,8 @@
         font-weight: bold;
         letter-spacing: 0px;
         color: #141b23;
-        position: absolute;
-        top: 0;
-        margin-top: 55%;
+        margin-bottom: 1%;
+        margin-top: 5%;
         cursor: pointer;
 
         &:hover {
@@ -329,7 +328,7 @@
 
       &__button {
         margin-top: 10px;
-        margin-bottom: 149px;
+        margin-bottom: 100px;
         border: none;
         color: #fff;
         font-size: 16px;
@@ -377,9 +376,12 @@
     }
 
     &__footer {
-      position: absolute;
-      bottom: 2%;
-      left: 10%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+      height: 19px;
+      margin-bottom: 17px;
 
       span {
         text-align: center;
