--- a/src/ui/ForgotPassword/Token/Token.scss
+++ b/src/ui/ForgotPassword/Token/Token.scss
@@ -262,7 +262,7 @@
 
       &__title {
         margin-bottom: 10px;
-        margin-top: 80px;
+        margin-top: 40px;
         text-align: left;
         font-size: 22px;
         font-weight: 900;
@@ -288,9 +288,8 @@
         font-weight: bold;
         letter-spacing: 0px;
         color: #141b23;
-        position: absolute;
-        top: 0;
-        margin-top: 55%;
+        margin-bottom: 1%;
+        margin-top: 5%;
         cursor: pointer;
 
         &:hover {
@@ -366,7 +365,7 @@
       }
 
       &__input {
-        margin: 20px 16px 30px 0;
+        margin: 20px 14px 30px 0;
         padding: 0 10px;
         outline: none;
         height: 100px;
@@ -430,8 +429,11 @@
 
     &__footer {
       display: flex;
-      align-self: center;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
       height: 19px;
+      margin-bottom: 17px;
 
       span {
         text-align: center;
